# MAthesis

./: .env  .gitignore  Dockerfile  Dockerfile.vitis_ai  Dockerfile.vitis_ai_onnxrt  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
src/: Dockerfile  db.py  endpoints.py  generate.py  main.py  preprocessing.py  requirements.txt  storage.py
src/front/: index.html
