[project]
name = "mathesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "blobfile>=3.0.0",
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.14",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.3.31",
    "loguru>=0.7.3",
    "pdfminer-six>=20250416",
    "protobuf>=6.30.2",
    "pypdf>=5.4.0",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.51.2",
    "uvicorn>=0.34.2",
]
